--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -19,32 +19,11 @@ RUN set -eux; \
 
 # install musl
 
-RUN curl -L https://git.zv.io/toolchains/musl-cross-make/-/archive/master/musl-cross-make-master.tar.gz | \
-    tar --strip-components=1 -xz; \
-    export STAT=" -static --static "; \
-    export FLAG=" -g0 -O2 -fno-align-functions -fno-align-jumps -fno-align-loops -fno-align-labels "; \
-    make install -j$(nproc) \
-    TARGET=arm-linux-musleabihf \
-    GCC_VER=9.3.0 \
-    MUSL_VER=1.2.0 \
-    BINUTILS_VER=2.34 \
-    GMP_VER=6.2.0 \
-    MPC_VER=1.1.0 \
-    MPFR_VER=4.0.2 \
-    LINUX_VER=5.4.24 \
-    DL_CMD="curl -C - -L -o" \
-    OUTPUT=/usr/local/ \
-    COMMON_CONFIG+=CC="gcc -static --static " CXX="g++ -static --static "  \
-    COMMON_CONFIG+=CFLAGS="${FLAG}" \
-                   CXXFLAGS="${FLAG}" \
-                   LDFLAGS="-s -static --static " \
-    "$@"; \
-    ls -a&& cd ..&&ls -a
-#RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
-#    tar xzf $MUSL_TARGET-cross.tgz&& \
-#    cd $MUSL_TARGET-cross&& \
-#    cp -fR * ../../usr/local/&& \
-#    cd ..&& rm -rf $MUSL_TARGET-cross*
+RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
+    tar xzf $MUSL_TARGET-cross.tgz&& \
+    cd $MUSL_TARGET-cross&& \
+    cp -fR * ../../usr/local/&& \
+    cd ..&& rm -rf $MUSL_TARGET-cross*
 
 
 ENV CC=$MUSL_TARGET-gcc \
