--- a/dockerfiles/config/armv7-unknown-linux-musleabihf.config
+++ b/dockerfiles/config/armv7-unknown-linux-musleabihf.config
@@ -1,3 +1,4 @@
 [target.armv7-unknown-linux-musleabihf]
 ar = "arm-linux-musleabihf-ar"
 linker = "arm-linux-musleabihf-ld"
+runner = "qemu-armeb-static"
