--- a/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.x86_64-unknown-linux-musl
@@ -60,7 +60,7 @@ RUN echo "Building zlib" && \
     tar xzf zlib-$VERS.tar.gz && cd zlib-$VERS && \
     $CC -v&&\
     CHOST=$TARGET CC=$TARGET_CC ./configure --static --prefix=/usr/local/$MUSL_TARGET && \
-    make && make install && \
+    make --silent && make --silent install && \
     cd .. && rm -rf zlib-$VERS.tar.gz zlib-$VERS checksums.txt
 RUN echo "Building OpenSSL" && \
     VERS=1.1.1d && \
@@ -68,7 +68,7 @@ RUN echo "Building OpenSSL" && \
     tar xzf openssl-$VERS.tar.gz && cd openssl-$VERS && \
     ./Configure $OPENSSL_ARCH no-async no-afalgeng no-shared --static --prefix=/usr/local/$MUSL_TARGET && \
     make depend && \
-    make && make install && \
+    make --silent && make --silent install && \
     cd .. && rm -rf openssl-$VERS.tar.gz openssl-$VERS checksums.txt /usr/local/$MUSL_TARGET/share
 
 # download rustup
