--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -81,9 +81,9 @@ RUN curl -s https://api.github.com/repos/multiarch/qemu-user-static/releases/lat
 
 # Allows qemu run dynamic linked binaries
 RUN ln -sf \
-    /usr/local/aarch64-linux-musl/lib/libc.so \
-    /usr/local/aarch64-linux-musl/lib/ld-musl-aarch64.so.1
-ENV QEMU_LD_PREFIX=/usr/local/aarch64-linux-musl
+    /usr/local/$MUSL_TARGET/lib/libc.so \
+    /usr/local/$MUSL_TARGET/lib/ld-musl-aarch64.so.1
+ENV QEMU_LD_PREFIX=/usr/local/$MUSL_TARGET
 
 # download rustup
 ADD "https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init" rustup-init
