--- a/dockerfiles/Dockerfile.armv7-unknown-linux-musleabihf
+++ b/dockerfiles/Dockerfile.armv7-unknown-linux-musleabihf
@@ -81,9 +81,9 @@ RUN curl -s https://api.github.com/repos/multiarch/qemu-user-static/releases/lat
 
 # Allows qemu run dynamic linked binaries
 RUN ln -sf \
-    /usr/local/arm-linux-musleabi/lib/libc.so \
-    /usr/local/arm-linux-musleabi/lib/ld-musl-arm.so.1
-ENV QEMU_LD_PREFIX=/usr/local/arm-linux-musleabi
+    /usr/local/$MUSL_TARGET/lib/libc.so \
+    /usr/local/$MUSL_TARGET/lib/ld-musl-arm.so.1
+ENV QEMU_LD_PREFIX=/usr/local/$MUSL_TARGET
 
 # download rustup
 ADD "https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init" rustup-init
