--- a/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
+++ b/dockerfiles/Dockerfile.aarch64-unknown-linux-musl
@@ -14,7 +14,7 @@ WORKDIR /builds
 # install tools and dependencies
 RUN set -eux; \
     apt update; \
-    apt install -y --no-install-recommends \
+    apt install -qq -y --no-install-recommends \
     autoconf automake binutils ca-certificates cmake file gcc g++ git jq \
     libc6-dev libtool m4 make pkg-config curl libssl-dev zlib1g-dev mc;
 
