--- a/dockerfiles/config/armv7-unknown-linux-musleabihf.config
+++ b/dockerfiles/config/armv7-unknown-linux-musleabihf.config
@@ -1,4 +1,4 @@
 [target.armv7-unknown-linux-musleabihf]
 ar = "arm-linux-musleabihf-ar"
-linker = "arm-linux-musleabihf-ld"
+linker = "arm-linux-musleabihf-gcc"
 runner = "qemu-armeb-static"
