--- a/dockerfiles/config/x86_64-unknown-linux-musl.config
+++ b/dockerfiles/config/x86_64-unknown-linux-musl.config
@@ -2,4 +2,4 @@
 # Enables the aes-ni instructions for RustCrypto dependency.
 rustflags = ["-C","target-feature=+aes,+sse2,+ssse3"]
 ar = "x86_64-linux-musl-ar"
-linker = "x86_64-linux-musl-ld"
+linker = "x86_64-linux-musl-gcc"
