--- a/dockerfiles/Dockerfile.armv7-unknown-linux-musleabihf
+++ b/dockerfiles/Dockerfile.armv7-unknown-linux-musleabihf
@@ -1,9 +1,9 @@
 FROM ubuntu:focal
 
 # metadata
-ARG TARGET=x86_64-unknown-linux-musl
-ARG OPENSSL_ARCH=linux-x86_64
-ARG MUSL_TARGET=x86_64-linux-musl
+ARG TARGET=armv7-unknown-linux-musleabihf
+ARG OPENSSL_ARCH=linux-armv4
+ARG MUSL_TARGET=armeb-linux-musleabihf
 
 ENV RUST_MUSL_CROSS_TARGET=$TARGET \
     TARGET_HOST=$TARGET
@@ -15,9 +15,11 @@ RUN set -eux; \
     apt update; \
     apt install -qq -y --no-install-recommends \
     autoconf automake binutils ca-certificates cmake file gcc g++ git jq \
-    libc6-dev libtool m4 make pkg-config curl libssl-dev zlib1g-dev mc;
+    libc6-dev libtool m4 make pkg-config curl libssl-dev zlib1g-dev mc \
+    qemu binfmt-support qemu-user-static;
 
 # install musl
+
 
 RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
     tar xzf $MUSL_TARGET-cross.tgz&& \
@@ -25,36 +27,37 @@ RUN curl -sLO https://musl.cc/$MUSL_TARGET-cross.tgz&& \
     cp -fR * ../../usr/local/&& \
     cd ..&& rm -rf $MUSL_TARGET-cross*
 
-
 ENV CC=$MUSL_TARGET-gcc \
     CXX=$MUSL_TARGET-g++ \
-    CC_x86_64_unknown_linux_musl=$MUSL_TARGET-gcc \
-    CXX_x86_64_unknown_linux_musl=$MUSL_TARGET-g++\
-    CARGO_TARGET_X86_64_UNKNOWN_LINUX_MUSL_LINKER=$MUSL_TARGET-gcc \
+    CC_armv7_unknown_linux_musleabihf=$MUSL_TARGET-gcc \
+    CXX_armv7_unknown_linux_musleabihf=$MUSL_TARGET-g++\
+    CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER=$MUSL_TARGET-gcc \
+    CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_RUNNER=qemu-user-static \
     TARGET_CC=$MUSL_TARGET-gcc\
     TARGET_CXX=$MUSL_TARGET-g++\
     TARGET_AR=$MUSL_TARGET-ar\
     TARGET_C_INCLUDE_PATH=/usr/local/$MUSL_TARGET/include/\
-    CXX_LIB_PATH_x86_64_unknown_linux_musl=/usr/local/$MUSL_TARGET/lib/ \
-    C_LIB_PATH_x86_64_unknown_linux_musl=/usr/local/$MUSL_TARGET/lib/\
+    CXX_LIB_PATH_armv7_unknown_linux_musleabihf=/usr/local/$MUSL_TARGET/lib/ \
+    C_LIB_PATH_armv7_unknown_linux_musleabihf=/usr/local/$MUSL_TARGET/lib/\
     CXXSTDLIB=stdc++ \
     TARGET_CXXSTDLIB=stdc++ \
-    CXXSTDLIB_x86_64_unknown_linux_musl=stdc++ \
-    LDFLAGS_x86_64_unknown_linux_musl=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$MUSL_TARGET/lib" \
+    CXXSTDLIB_armv7_unknown_linux_musleabihf=stdc++ \
+    LDFLAGS_armv7_unknown_linux_musleabihf=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$MUSL_TARGET/lib" \
     LDFLAGS=" -static -static-libstdc++ -static-libgcc -L/usr/local/lib -L/usr/local/$MUSL_TARGET/lib" \
-    CFLAGS_x86_64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
-    CXXFLAGS_x86_64_unknown_linux_musl=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
-    CFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
-    CXXFLAGS=" -fPIC  -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CFLAGS_armv7_unknown_linux_musleabihf=" -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CXXFLAGS_armv7_unknown_linux_musleabihf=" -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CFLAGS=" -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
+    CXXFLAGS=" -I/usr/local/include -I/usr/local/$MUSL_TARGET/include" \
     LD_LIBRARY_PATH=/usr/local/lib:/usr/local/$MUSL_TARGET/lib:$LD_LIBRARY_PATH \
     PKG_CONFIG_ALLOW_CROSS=1 \
     PKG_CONFIG_ALL_STATIC=1 \
     OPENSSL_STATIC=1 \
     LIBZ_SYS_STATIC=1 \
-    PATH=/usr/local/$MUSL_TARGET/b78.46.21.213in:$PATH
+    PATH=/usr/local/$MUSL_TARGET/bin:$PATH
 
 # ZLib & OpenSSL
-RUN echo "Building zlib" && \
+RUN set -eux; \
+    echo "Building zlib" && \
     VERS=1.2.11 && \
     curl -sLO https://zlib.net/zlib-$VERS.tar.gz && \
     tar xzf zlib-$VERS.tar.gz && cd zlib-$VERS && \
@@ -62,7 +65,8 @@ RUN echo "Building zlib" && \
     CHOST=$TARGET CC=$TARGET_CC ./configure --static --prefix=/usr/local/$MUSL_TARGET && \
     make --silent && make --silent install && \
     cd .. && rm -rf zlib-$VERS.tar.gz zlib-$VERS checksums.txt
-RUN echo "Building OpenSSL" && \
+RUN set -eux; \
+    echo "Building OpenSSL" && \
     VERS=1.1.1d && \
     curl -sLO https://www.openssl.org/source/openssl-$VERS.tar.gz && \
     tar xzf openssl-$VERS.tar.gz && cd openssl-$VERS && \
@@ -70,6 +74,17 @@ RUN echo "Building OpenSSL" && \
     make depend && \
     make --silent && make --silent install && \
     cd .. && rm -rf openssl-$VERS.tar.gz openssl-$VERS checksums.txt /usr/local/$MUSL_TARGET/share
+
+#Install QEMU
+RUN curl -s https://api.github.com/repos/multiarch/qemu-user-static/releases/latest \
+    | grep 'browser_download_url.*x86_64_qemu-armeb-static.tar.gz"' \
+    | cut -d : -f 2,3 | xargs -n 1 curl -sSL | tar -xzC /usr/local/bin/
+
+# Allows qemu run dynamic linked binaries
+RUN ln -sf \
+    /usr/local/$MUSL_TARGET/lib/libc.so \
+    /usr/local/$MUSL_TARGET/lib/ld-musl-arm.so.1
+ENV QEMU_LD_PREFIX=/usr/local/$MUSL_TARGET
 
 # download rustup
 ADD "https://static.rust-lang.org/rustup/dist/x86_64-unknown-linux-gnu/rustup-init" rustup-init
@@ -103,7 +118,8 @@ ENV OPENSSL_DIR=/usr/local/$MUSL_TARGET/ \
 
 #Prepare sccache ENV
 RUN mkdir $HOME/sccache
-ENV RUST_BACKTRACE=full\
+ENV RUST_BACKTRACE=full \
+    RUST_TEST_THREADS=1 \
     RUSTC_WRAPPER=sccache \
     SCCACHE_DIR=$HOME/sccache \
     SCCACHE_CACHE_SIZE=1G
